--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "react-native-vih-messengers",
-  "version": "0.0.1",
+  "version": "0.0.23",
   "private": false,
   "main": "index.js",
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest"
+  },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
@@ -34,13 +41,17 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
     "@reduxjs/toolkit": "^2.2.1",
-    "moment": "^2.30.1", 
+    "axios": "^1.6.8",
+    "moment": "^2.30.1",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-picker": "^7.1.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.4",
     "react-native-reanimated": "^3.7.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-swipe-list-view": "^3.2.9",
